autoresync is for non repl sets only SERVER-3248